# django_rest_api

./: db.sqlite3  pyproject.toml
api/: models.py
bookstore/: settings.py
